<resources>
    <string name="app_name">BurnedCaloriesCalculator</string>
    <string name="weight">Weight:</string>
    <string name="calories_burned">Calories Burned:</string>
    <string name="miles_ran">Miles Ran:</string>
    <string name="height">Height:</string>
    <string name="bmi">BMI</string>
    <string name="name">Name</string>
    <string name="_000_00">000.00</string>

    <string-array name="foot_array">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="inch_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
</resources>
